--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,5 +4,214 @@
 }
 
 body {
-font-family: Cardo, Montserrat;
+    font-family: Cardo, Montserrat;
+    color: #FFFFFF;
 }
+
+.header-and-showcase-container{
+    background: url(../../img/hotel-1831072_960_720.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 744px;
+    
+   
+}
+
+/*Header*/
+#header{
+    display: grid;
+    padding: 20px;
+    font-family:Montserrat;
+    line-height: 24px;
+}
+
+
+.inline-container{
+    display: block;
+}
+
+#header-img-link{
+    text-decoration: none;
+    border: 1px solid #FFFFFF;
+    color: #FFFFFF;
+    padding: 5px 8px;
+}
+
+
+#navbar{
+float: right;
+margin-top: 3px;
+}
+
+
+#navbar li{
+    float:left;
+    list-style: none;
+    margin-left: 25px;
+}
+.nav-link{
+    text-decoration: none;
+    color: #FFFFFF;
+}
+
+.logo{
+    float:left;
+    list-style: none;
+    font-weight: bold;
+    margin-top: 8px;
+    margin-left: 70px;
+}
+
+.logo li{
+    margin-left: 12px;
+}
+
+.nav-link:hover{
+    color:rgb(235, 197, 170);
+}
+
+#header-img{
+    height: 30px;
+    width: 30px;
+    margin-top: -5px;
+}
+
+
+/*Showcase Section*/
+.showcase-section{
+    color:#ffffff;
+    width: fit-content;
+    padding-left:96px;
+    margin-top: 200px;
+    margin-bottom: 200px;
+}
+.showcase-section h1{
+font-family: Cardo;
+color:#FFFFFF;
+font-style: normal;
+font-weight: bold;
+font-size: 72px;
+line-height: 97px;
+}
+
+.showcase-section-p{
+    width: 550px;
+    font-family: Cardo;
+    font-style: normal;
+    font-size: 24px;
+    line-height: 32px;
+}
+
+.showcase-section span{
+    display: block;
+    padding: 16px 16px 16px 0;
+}
+.showcase-section a{
+    background: #CC8655;
+    padding: 16px 24px;
+    font-family: Cardo;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 150%;
+}
+
+.section-one-welcome-to-hotel-ng{
+    background: #E5E5E5;
+    display: grid;
+    grid-template-rows: 1fr;
+    border: 1px solid red;
+   
+}
+
+.welcome-to-hng-container{
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    justify-items: center;
+    border: 1px solid green;
+    width: fit-content;
+    color:#333;
+}
+
+
+
+/*mini images*/
+/* 
+.images-in-a-row-container{
+    display: grid;
+    justify-items: center;
+} */
+.image-gallery{
+       position: relative;
+       top:-43px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        
+}
+
+
+.image-gallery div{
+    text-align: center;
+    color: #eee;
+    margin-left: 35px;
+    margin-right: 35px;
+}
+
+.image-gallery div p{
+    margin-top: 260px;
+    font-size: 20px;
+}
+.image-gallery div:nth-last-of-type(1){
+    background: url(../../img/dinning_hall.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width:343px;
+    height: 315px;
+}
+
+.image-gallery div:nth-last-of-type(2){
+    background: url(../../img/resort-918952_960_720.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width:343px;
+    height: 315px;
+}
+
+.image-gallery div:nth-last-of-type(3){
+    background: url(../../img/1st_section_1st_image.jpg);
+    
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width:343px;
+    height: 315px;
+}
+
+.resort-img{
+    width:500px;
+    height:300px;
+}
+
+
+
+@media(max-width: 1900px){
+    /* body{
+        display:none;
+    } */
+
+
+}
+
+
+
+
+
+
+
+
+
+
